k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: catalog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: microservice
          image: anandvrm88/microservice
          ports:
            - containerPort: 8080
