k8s/catalog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: catalog
