k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: virtual-host-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: blue.example.com
      http:
        paths:
          - backend:
              service:
                name: catalog-svc
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
